--- a/src/components/DisplayData.css
+++ b/src/components/DisplayData.css
@@ -1,9 +1,10 @@
-.Telemetry {
+.Inputs {
     position: absolute;
     text-align: left;
     left: 0;
-    height: 50vh;
-    width: 24vw;
+    top: 0;
+    height: 20vh;
+    width: 16vw;
     background-color: rgb(201, 199, 199);
     color: rgb(0, 0, 0);
 }
